--- a/templates/admin.html
+++ b/templates/admin.html
@@ -38,7 +38,11 @@
                             <div id="fileprogress"></div>
                         </div>
                     </div>
-                    <input type="submit" value="Upload">
+                    <!-- <input type="submit" value="Upload"> -->
+                    <button class="button" type="submit" value="Upload">
+                        <span class="button__text">Upload</span>
+                        <span class="button__icon"><img src="{{ url_for('static', filename='images/upload.png') }}" height="30" width="30" alt="X-icon"></span>
+                      </button>
                 </div>
             </div>
             
