made the sidebar look pretty

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,22 +10,20 @@
     <div>
     <div class="sidenav">
         <button class="openbtn" onclick="openNav()">&#9776;</button>
-        <button class="openbtn" onclick="openNav()"><img src="{{ url_for('static', filename='images/profile_icon.webp') }}" height="50" width="50" alt="profile"></button>
-        <button class="openbtn" onclick="openNav()"><img src="{{ url_for('static', filename='images/profile_icon.webp') }}" height="50" width="50" alt="profile"></button>
-        <button class="openbtn" onclick="openNav()"><img src="{{ url_for('static', filename='images/settings.png') }}" height="50" width="50" alt="settings"></button>
-        <button class="openbtn" onclick="openNav()"><img src="{{ url_for('static', filename='images/integration.png') }}" height="50" width="50" alt="integration"></button>
-        <button class="openbtn" onclick="openNav()"><img src="{{ url_for('static', filename='images/data-analytics.png') }}" height="50" width="50" alt="analytics"></button>
-        <button class="openbtn" onclick="openNav()"><img src="{{ url_for('static', filename='images/usage-based-price.png') }}" height="50" width="50" alt="usage"></button>
+        <button class="btns" title="Documents" onclick="openNav()"><img src="{{ url_for('static', filename='images/paper (1).png') }}" height="50" width="50" alt="Documents"></button>
+        <button class="btns" title="Settings" onclick="openNav()"><img src="{{ url_for('static', filename='images/setting (1).png') }}" height="50" width="50" alt="settings"></button>
+        <button class="btns" title="Integration" onclick="openNav()"><img src="{{ url_for('static', filename='images/integration (1).png') }}" height="50" width="50" alt="integration"></button>
+        <button class="btns" title="Analytics" onclick="openNav()"><img src="{{ url_for('static', filename='images/data-analytics (1).png') }}" height="50" width="50" alt="analytics"></button>
+        <button class="btns" title="Usage" onclick="openNav()"><img src="{{ url_for('static', filename='images/usage-based-price (1).png') }}" height="50" width="50" alt="usage"></button>
     </div>
     <section id="sidepanel">
         <div id="mySidepanel" class="sidepanel">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Data</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
-            <a href="#">Contact</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
+            <a href="#" class="mgn">Documents</a>
+            <a href="#">Settings</a>
+            <a href="#">Integrations</a>
+            <a href="#">Analytics</a>
+            <a href="#">Usage</a>
         </div>
             
             
