--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -295,17 +295,24 @@ section {
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidepanel */
+    font-family: Tahoma;
   }
   
   /* The sidepanel links */
- .sidepanel a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-    border: 1px solid #818181;
+.sidepanel a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 32px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+  height: 46px;
+  padding-top: 30px;
+  border-bottom: 1px solid #818181;
+}
+
+  .mgn {
+    margin-top: 42px;
   }
   
   /* When you mouse over the navigation links, change their color */
@@ -321,18 +328,39 @@ section {
     font-size: 36px;
     margin-left: 50px;
   }
+  .closebtn {
+    border-bottom: none;
+    margin-top: 20px;
+    height: 65px;
+    width: 50px;
+  }
   
   /* Style the button that is used to open the sidepanel */
   .openbtn {
+    font-size: 32px;
+    cursor: pointer;
+    background-color: #111;
+    color: rgb(255, 255, 255);
+    padding: 20px 26px;
+    border: none;
+    height: 50;
+    width: 50;
+  }
+  
+  .openbtn:hover {
+    background-color: #444;
+  }
+
+  .btns {
     font-size: 50px;
     cursor: pointer;
     background-color: #111;
     color: rgb(255, 255, 255);
-    padding: 10px 15px;
+    padding: 15px 15px 10px 15px;
     border: none;
   }
   
-  .openbtn:hover {
+  .btns:hover {
     background-color: #444;
   }
 
