--- a/templates/index.html
+++ b/templates/index.html
@@ -11,22 +11,22 @@
 </head>
 <body>
     <div class="widget">
-        <div class="widget-button" id="widget-button"></div>
+        <!-- <div class="widget-button" id="widget-button"></div> -->
         <div class="chatbot" id="chatbot">
             <div class="chatbox">
                 <div class="chatbox-header">
                     <span class="chatbox-title">
                         <div class="chatbox-icon">
-                            <img src="{{ url_for('static', filename='images/Indiana_University_seal.png') }}" alt="HR Assistant" width="150" height="150">
+                            <img src="{{ url_for('static', filename='images/beber camp.png') }}" alt="Virtual assistant" width="150" height="150">
                         </div>
-                        <div class="chatbox-top">HR Assistant</div> 
+                        <div class="chatbox-top">Virtual assistant</div> 
                     </span>
                     <div class="chatbox-close">
                         <div id="refresh">
                             <img src="{{ url_for('static', filename='images/refresh.png') }}" alt="Refresh" width="20" height="20">
                         </div>
                     </div>
-                    <div class="chatbox-close" id="chatbox-close">X</div>
+                    <!-- <div class="chatbox-close" id="chatbox-close">X</div> -->
                 </div>
                 <div class="chatbox-body">
                     <!-- Chat messages go here -->
