--- a/templates/admin.html
+++ b/templates/admin.html
@@ -121,11 +121,17 @@
         </table>
     </div>
     </section>
-    <button id="chatbot-button" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000; padding: 10px 20px; background-size: cover; transition: transform 0.2s ease-in-out; outline: none;">Chat</button>
+    <img id="chatbot-button" src="{{ url_for('static', filename='images/chatboticon.png') }}" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;">
 
-<iframe src="http://127.0.0.1:5000/" id="chatbot-iframe" frameborder="0" scrolling="no" width="400" height="700" style="display: none; position:fixed; bottom:60px; right:0; z-index:9999;"></iframe>
+<iframe src="http://127.0.0.1:5000/" id="chatbot-iframe" frameborder="0" scrolling="no" width="400" height="700" style="display: none; position:fixed; bottom:80px; right:0; z-index:9999;"></iframe>
 <script>
-    
+    var chatbotButton = document.getElementById('chatbot-button');
+    chatbotButton.addEventListener('mouseover', function() {
+        this.style.transform = 'scale(1.1)';
+    });
+    chatbotButton.addEventListener('mouseout', function() {
+        this.style.transform = 'scale(1)';
+    });
     document.getElementById('chatbot-button').addEventListener('click', function() {
         var iframe = document.getElementById('chatbot-iframe');
         if (iframe.style.display === 'none') {
