--- a/templates/admin.html
+++ b/templates/admin.html
@@ -19,9 +19,9 @@
     <section id="sidepanel">
         <div id="mySidepanel" class="sidepanel">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#" id="admin" class="mgn">Documents</a>
-            <a href="#" id="settings" >Settings</a>
-            <a href="#" id="integrations">Integrations</a>
+            <a href="{{ url_for('admin') }}" id="admin" class="mgn">Documents</a>
+            <a href="#" id="settings">Settings</a>
+            <a href="{{ url_for('integrations') }}" id="integrations">Integrations</a>
             <a href="#" id="analytics">Analytics</a>
             <a href="#" id="usage">Usage</a>
         </div>
@@ -30,136 +30,130 @@
     </section>
   
     <!-- Upload form -->
-    <section>
-        
-        
-        <form class="form" class="form_1" action="/upload" method="post" enctype="multipart/form-data" id="upload-form">
-            <h2>Upload Documents</h2>
-            <div id="form-content">
-                <div class="upload-area" id="upload-area">
-                    <img src="{{ url_for('static', filename='images/cloud-upload.png') }}" height="200" width="200" alt="Upload">
-                    <label class="upload-label">Drag and drop files here or <span class="click-text" id="click-text">click</span> to choose a file:</label>
-                    <input type="file" id="file" name="file" required multiple onchange="updateFileSizeAndCount();">
-                    <label id="file-label">Choose file(s)</label>
-                </div>
-                <div id="uploading">
-                    <h3>Uploading list</h3>
-                    <div id="file-list">
-
-                    </div>     
+    <div class="main-container">
+        <div class="left-container">
+            <section class="upload-section" id="document-upload">
+                <section>
                     
-                    <div id="filelist">
-                        <div id="fileitem">
-                            <div id="fileinfo">
-                                <img src="{{ url_for('static', filename='images/PDF icon.png') }}" height="30" width="30" alt="PDF-icon">
-                                <div id="filename"></div>
-                                <div id="filesize"></div>
-                                <div  class="left"><img src="{{ url_for('static', filename='images/X-icon.png') }}" height="20" width="20" alt="X-icon"></div>
+                    
+                    <form class="form" class="form_1" action="/upload" method="post" enctype="multipart/form-data" id="upload-form">
+                        <h2>Upload Documents</h2>
+                        <div id="form-content">
+                            <div class="upload-area" id="upload-area">
+                                <img src="{{ url_for('static', filename='images/cloud-upload.png') }}" height="200" width="200" alt="Upload">
+                                <label class="upload-label">Drag and drop files here or <span class="click-text" id="click-text">click</span> to choose a file:</label>
+                                <input type="file" id="file" name="file" required multiple onchange="updateFileSizeAndCount();">
+                                <label id="file-label">Choose file(s)</label>
                             </div>
-                            <div id="fileprogress"></div>
-                        </div>
-                    </div>
-                    <!-- <input type="submit" value="Upload"> -->
-                    <button class="button" type="submit" value="Upload">
-                        <span class="button__text">Upload</span>
-                        <span class="button__icon"><img src="{{ url_for('static', filename='images/upload.png') }}" height="30" width="30" alt="upload"></span>
-                      </button>
-                </div>
-            </div>
-            
-            <div id="loading" class="loader-div">
-                <div class="loader"></div>
-                <p>Uploading...</p>
-            </div>
-        </form>
-    </section>
+                            <div id="uploading">
+                                <h3>Uploading list</h3>
+                                <div id="file-list">
 
-    <section >
-        <div class="file-list">
-        <h2>Existing Documents</h2>
-        <table>
-            <thead>
-                <tr class="final-row">
-                    <th></th>
-                    <th>Name</th>
-                    <th>Size</th>
-                    <th>Date added</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for document in documents %}
-                    <tr>
-                        <td><img src="{{ url_for('static', filename='images/PDF icon.png') }}" height="30" width="30" alt="PDF-icon"></td>
-                        <td>{{ document.name }}</td>
-                        <td class="sub-column">{{ document.size }} Mb</td>
-                        <td class="sub-column">{{ document.date_added }}</td>
-                        <td>
-                            <div class="bin-container">
-                            <form action="/delete/{{ document.id }}" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
-                                <input class ="bin" type="image" src="{{ url_for('static', filename='images/bin.png') }}" alt="Submit">
-                            </form>
+                                </div>     
+                                
+                                <div id="filelist">
+                                    <div id="fileitem">
+                                        <div id="fileinfo">
+                                            <img src="{{ url_for('static', filename='images/PDF icon.png') }}" height="30" width="30" alt="PDF-icon">
+                                            <div id="filename"></div>
+                                            <div id="filesize"></div>
+                                            <div  class="left"><img src="{{ url_for('static', filename='images/X-icon.png') }}" height="20" width="20" alt="X-icon"></div>
+                                        </div>
+                                        <div id="fileprogress"></div>
+                                    </div>
+                                </div>
+                                <!-- <input type="submit" value="Upload"> -->
+                                <button class="button" type="submit" value="Upload">
+                                    <span class="button__text">Upload</span>
+                                    <span class="button__icon"><img src="{{ url_for('static', filename='images/upload.png') }}" height="30" width="30" alt="upload"></span>
+                                </button>
+                            </div>
                         </div>
-                        </td>
-                    </tr>
-                {% endfor %}
-                <!-- <tr class="final-row">
-                    <td></td>
-                    <td></td>
-                    <td class="sub-column"></td>
-                    <td class="sub-column"></td>
-                    <td class="sub-column"></td>
-                    <td>
-                        <div class="bin-container">
-                        <form>
-                            <input class ="bin" type="image" src="{{ url_for('static', filename='images/bin.png') }}" alt="Submit">
-                        </form>
+                        
+                        <div id="loading" class="loader-div">
+                            <div class="loader"></div>
+                            <p>Uploading...</p>
+                        </div>
+                    </form>
+                </section>
+
+                <section >
+                    <div class="file-list">
+                    <h2>Existing Documents</h2>
+                    <table>
+                        <thead>
+                            <tr class="final-row">
+                                <th></th>
+                                <th>Name</th>
+                                <th>Size</th>
+                                <th>Date added</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for document in documents %}
+                                <tr>
+                                    <td><img src="{{ url_for('static', filename='images/PDF icon.png') }}" height="30" width="30" alt="PDF-icon"></td>
+                                    <td>{{ document.name }}</td>
+                                    <td class="sub-column">{{ document.size }} Mb</td>
+                                    <td class="sub-column">{{ document.date_added }}</td>
+                                    <td>
+                                        <div class="bin-container">
+                                        <form action="/delete/{{ document.id }}" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
+                                            <input class ="bin" type="image" src="{{ url_for('static', filename='images/bin.png') }}" alt="Submit">
+                                        </form>
+                                    </div>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                     </div>
-                    </td>
-                </tr> -->
-            </tbody>
-        </table>
+                </section>
+            </section>
+        </div>
+        <div class="right-container">
+            <img id="chatbot-button" src="{{ url_for('static', filename='images/chatboticon.png') }}" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;">
+
+            <iframe src="https://hr-bot-beast-aa887886e420.herokuapp.com/" id="chatbot-iframe" frameborder="0" scrolling="no" width="400" height="700" style="display: none; position:fixed; bottom:80px; right:0; z-index:9999;"></iframe>
+            <script>
+                var chatbotButton = document.getElementById('chatbot-button');
+                chatbotButton.addEventListener('mouseover', function() {
+                    this.style.transform = 'scale(1.1)';
+                });
+                chatbotButton.addEventListener('mouseout', function() {
+                    this.style.transform = 'scale(1)';
+                });
+                document.getElementById('chatbot-button').addEventListener('click', function() {
+                    var iframe = document.getElementById('chatbot-iframe');
+                    if (iframe.style.display === 'none') {
+                        iframe.style.display = 'block';
+                        // Add the event listener when the chatbot is opened
+                        document.addEventListener('click', closeChatbotOnClickOutside);
+                    } else {
+                        iframe.style.display = 'none';
+                        // Remove the event listener when the chatbot is closed
+                        document.removeEventListener('click', closeChatbotOnClickOutside);
+                    }
+                });
+
+                function closeChatbotOnClickOutside(event) {
+                    var chatbot = document.getElementById("chatbot-iframe");
+                    // Check if the click was outside the chatbot
+                    if (event.target.id !== 'chatbot-iframe' && event.target.id !== 'chatbot-button') {
+                        closeChatbot();
+                    }
+                }
+
+                function closeChatbot() {
+                    var iframe = document.getElementById('chatbot-iframe');
+                    iframe.style.display = 'none';
+                    // Remove the event listener when the chatbot is closed
+                    document.removeEventListener('click', closeChatbotOnClickOutside);
+                }
+            </script>
+        </div>
     </div>
-    </section>
-    <img id="chatbot-button" src="{{ url_for('static', filename='images/chatboticon.png') }}" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;">
-
-<iframe src="https://hr-bot-beast-aa887886e420.herokuapp.com/" id="chatbot-iframe" frameborder="0" scrolling="no" width="400" height="700" style="display: none; position:fixed; bottom:80px; right:0; z-index:9999;"></iframe>
-<script>
-    var chatbotButton = document.getElementById('chatbot-button');
-    chatbotButton.addEventListener('mouseover', function() {
-        this.style.transform = 'scale(1.1)';
-    });
-    chatbotButton.addEventListener('mouseout', function() {
-        this.style.transform = 'scale(1)';
-    });
-    document.getElementById('chatbot-button').addEventListener('click', function() {
-        var iframe = document.getElementById('chatbot-iframe');
-        if (iframe.style.display === 'none') {
-            iframe.style.display = 'block';
-            // Add the event listener when the chatbot is opened
-            document.addEventListener('click', closeChatbotOnClickOutside);
-        } else {
-            iframe.style.display = 'none';
-            // Remove the event listener when the chatbot is closed
-            document.removeEventListener('click', closeChatbotOnClickOutside);
-        }
-    });
-
-    function closeChatbotOnClickOutside(event) {
-        var chatbot = document.getElementById("chatbot-iframe");
-        // Check if the click was outside the chatbot
-        if (event.target.id !== 'chatbot-iframe' && event.target.id !== 'chatbot-button') {
-            closeChatbot();
-        }
-    }
-
-    function closeChatbot() {
-        var iframe = document.getElementById('chatbot-iframe');
-        iframe.style.display = 'none';
-        // Remove the event listener when the chatbot is closed
-        document.removeEventListener('click', closeChatbotOnClickOutside);
-    }
-</script>
     
     
     <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
