Update font-family and bot temperature settings

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -88,7 +88,7 @@
             height: 460px;
             overflow-y: scroll;
             /* background-color: #e0e9f4; */
-            font-family: Poppins, sans-serif;
+            font-family: var(--font-family);
             background-color: var(--background-color);
             /* background-color: #000e1f; */
         }
