--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,8 @@
 </body>
 <style>
     :root {
-      --background-color: {{ settings.background_color }};
+        --background-color: {{ settings.background_color }};
+        --font-family: {{ settings.font_style }};
     }
     </style>
 </html>
