--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -18,7 +18,7 @@
         <div id="mySidepanel" class="sidepanel">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="{{ url_for('admin') }}" id="admin" class="mgn">Documents</a>
-            <a href="#" id="settings">Settings</a>
+            <a href="{{ url_for('settings') }}" id="settings">Settings</a>
             <a href="{{ url_for('integrations') }}" id="integrations">Integrations</a>
             <a href="#" id="analytics">Analytics</a>
             <a href="#" id="usage">Usage</a>
