--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -116,44 +116,56 @@
     .sidenav a {font-size: 18px;}
   }
 
-.code-container {
-    position: relative;
-    padding: 10px;
-    margin: 15px 0;
-    overflow-x: auto;
-    margin-left: 100px;
-    margin-right: 15px;
+  body {
+    font-family: Arial, sans-serif;
 }
 
-.copy-btn {
-    position: absolute;
-    top: 25px;
-    right: 15px;
-}
-
-.code-container pre {
-    background-color: #111; /* Change this to match your website's color scheme */
-    border: 1px solid #ccc; /* Change this to match your website's color scheme */
-    padding: 10px;
-    margin: 10px 0;
-    overflow-x: auto;
-}
-
-.code-container pre {
-    /* existing styles */
-    border-radius: 10px; /* rounded corners */
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* shadow effect */
-    line-height: 1.5; /* space between lines */
-    font-size: 14px; /* size of the text */
-}
-
-.code-container code {
-    color: #fdfdfd; /* Change this to match your website's color scheme */
-    font-family: Verdana, Geneva, Tahoma, sans-serif; /* Change this to match your website's typography */
-
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
 }
 
 .instructions {
     font-family: Arial, sans-serif;
     margin-left: 100px; /* left margin of 100px */
+    text-align: left;
+}
+.settings-section {
+    margin-left: 100px;
+    margin-bottom: 50px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 40%;
+}
+
+.settings-section h3 {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+.settings-section form label {
+    font-weight: bold;
+    color: #333;
+}
+
+input[type="submit"] {
+    margin-left: 100px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+select#font_style {
+    cursor: pointer;
+}
+
+input#background_color {
+    cursor: pointer;
 }
