--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -20,7 +20,7 @@
             <a href="{{ url_for('admin') }}" id="admin" class="mgn">Documents</a>
             <a href="{{ url_for('settings') }}" id="settings">Settings</a>
             <a href="{{ url_for('integrations') }}" id="integrations">Integrations</a>
-            <a href="#" id="analytics">Analytics</a>
+            <a href="{{ url_for('analytics') }}" id="analytics">Analytics</a>
             <a href="#" id="usage">Usage</a>
         </div>
     </section>
@@ -68,7 +68,7 @@
             }
         &lt;/script&gt;
         </code></pre>
-        <button class="copy-btn" onclick="copyCode()">Copy Code</button>
+        <button class="copy-btn" onclick="copyCode()" style="cursor: pointer;">Copy Code</button>
     </div>
 
     <script src="{{ url_for('static', filename='js/integrations.js') }}"></script>
