--- a/templates/settings.html
+++ b/templates/settings.html
@@ -24,7 +24,7 @@
             <a href="{{ url_for('admin') }}" id="admin" class="mgn">Documents</a>
             <a href="{{ url_for('settings') }}" id="settings">Settings</a>
             <a href="{{ url_for('integrations') }}" id="integrations">Integrations</a>
-            <a href="#" id="analytics">Analytics</a>
+            <a href="{{ url_for('analytics') }}" id="analytics">Analytics</a>
             <a href="#" id="usage">Usage</a>
         </div>
             
