--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1,3 +1,21 @@
+.top-ribbon {
+  background-color: #111;
+  height: 101px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 20px;
+  color: white;
+  font-size: 40px;
+}
+
+.company-name {
+  margin-right: 10px;
+  font-family: Arial, sans-serif; /* Change this to your preferred font */
+  font-weight: bold;
+  font-style: italic;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -46,7 +64,7 @@ h3 {
     background-color: #fff;
     border: 2px solid #c1c1c1;
     border-radius: 5px;
-    margin-top: 100px;
+    margin-top: 50px;
     font-family: Tahoma;
 }
 
