--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,3 +1,27 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
+.top-ribbon {
+  background-color: #111;
+  height: 101px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 20px;
+  color: white;
+  font-size: 40px;
+}
+
+.company-name {
+  margin-right: 10px;
+  font-family: Arial, sans-serif; /* Change this to your preferred font */
+  font-weight: bold;
+  font-style: italic;
+}
+
+
 body {
     background-color: #f2f2f2;
     font-family: Arial, sans-serif;
