--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,6 +7,9 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body>
+    <div class="top-ribbon">
+        <span class="company-name">EccoAI</span>
+    </div>
     <div>
     <div class="sidenav">
         <button class="openbtn" onclick="openNav()">&#9776;</button>
