--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -4,8 +4,12 @@
     <title>Analytics</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/analytics.css') }}">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+    <div class="top-ribbon">
+        <span class="company-name">EccoAI</span>
+    </div>
     <div class="sidenav">
         <button class="openbtn" onclick="openNav()">&#9776;</button>
         <button class="btns" id="admin" title="Documents" onclick="openNav()"><img src="{{ url_for('static', filename='images/paper (1).png') }}" height="50" width="50" alt="Documents"></button>
@@ -24,22 +28,30 @@
             <a href="#" id="usage">Usage</a>
         </div>                
     </section>
-    <div class="questions-container">
-        <h2>Questions and Feedback</h2>
-        <table>
-            <tr>
-                <th>User Question</th>
-                <th>Bot Response</th>
-                <th>Feedback</th>
-            </tr>
-            {% for item in data %}
-                <tr class="{{ 'like' if item['feedback_type'] == 'Like' else 'dislike' }}">
-                    <td>{{ item['user_question'] }}</td>
-                    <td>{{ item['bot_response'] }}</td>
-                    <td>{{ item['feedback_type'] }}</td>
+    <h2 class="instructions">Response Feedback</h2>
+    <div class="flex-container">
+        <div class="questions-container">
+            <table>
+                <tr>
+                    <th>User Question</th>
+                    <th>Bot Response</th>
+                    <th>Feedback</th>
                 </tr>
-            {% endfor %}
-        </table>
+                {% for item in data %}
+                    <tr class="{{ 'like' if item['feedback_type'] == 'Like' else 'dislike' }}">
+                        <td>{{ item['user_question'] }}</td>
+                        <td>{{ item['bot_response'] }}</td>
+                        <td>{{ item['feedback_type'] }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
+        <div class="chart-container">
+            <canvas id="myChart"></canvas>
+        </div>
+    </div>
+    <div class="bar-chart-container">
+        <canvas id="bar-chart"></canvas>
     </div>
     <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
 </body>
