--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/integrations.css') }}">
 </head>
 <body>
+    <div class="top-ribbon">
+        <span class="company-name">EccoAI</span>
+    </div>
     <div class="sidenav">
         <button class="openbtn" onclick="openNav()">&#9776;</button>
         <button class="btns" id="admin" title="Documents" onclick="openNav()"><img src="{{ url_for('static', filename='images/paper (1).png') }}" height="50" width="50" alt="Documents"></button>
