--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
 </head>
 <body>
+  <div class="top-ribbon">
+    <span class="company-name">EccoAI</span>
+  </div>
 
   <form method="post">
     <label for="username">Username</label>
