--- a/templates/settings.html
+++ b/templates/settings.html
@@ -10,6 +10,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
+    <div class="top-ribbon">
+        <span class="company-name">EccoAI</span>
+    </div>
     <div class="sidenav">
         <button class="openbtn" onclick="openNav()">&#9776;</button>
         <button class="btns" id="admin" title="Documents" onclick="openNav()"><img src="{{ url_for('static', filename='images/paper (1).png') }}" height="50" width="50" alt="Documents"></button>
