--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -31,7 +31,7 @@
     <p class="instructions">Copy and paste this code before the &lt;/body&gt; tag on your website:</p>
     <div class="code-container">
         <pre><code id="chatbot-code">
-        &lt;img id="chatbot-button" src="https://hr-bot-beast-aa887886e420.herokuapp.com/static/images/chatboticon.png" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;"&gt;
+        &lt;img id="chatbot-button" src="https://hr-bot-beast-aa887886e420.herokuapp.com{{ url_for('static', filename='images/' + settings['widget_icon'] + '.png') }}" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;"&gt;
 
         &lt;iframe src="https://hr-bot-beast-aa887886e420.herokuapp.com/" id="chatbot-iframe" frameborder="0" scrolling="no" width="400" height="700" style="display: none; position:fixed; bottom:80px; right:0; z-index:9999;"&gt;&lt;/iframe&gt;
         &lt;script&gt;
