Fix formatting and update settings UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                         <div class="chatbox-icon">
                             <img src="{{ url_for('static', filename='images/beber camp.png') }}" alt="Virtual assistant" width="150" height="150">
                         </div>
-                        <div class="chatbox-top">Virtual assistant</div> 
+                        <div class="chatbox-top">Virtual Assistant</div> 
                     </span>
                     <div class="chatbox-close">
                         <div id="refresh">
