--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -21,6 +21,35 @@ html, body {
   font-style: italic;
 }
 
+label[for="custom_prompt"] {
+  display: block;
+  font-family: Arial, sans-serif;
+  margin-bottom: 10px;
+}
+
+textarea#custom_prompt {
+  font-family: Arial, sans-serif;
+  resize: none;
+  width: 100%;
+  height: 100px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+label[for="greeting_message"] {
+  display: block;
+  font-family: Arial, sans-serif;
+  margin-bottom: 10px;
+}
+
+textarea#greeting_message {
+  font-family: Arial, sans-serif;
+  resize: none;
+  width: 100%;
+  height: 50px;
+  padding: 10px;
+  box-sizing: border-box;
+}
 
 .sidepanel {
     height: 100%; /* Specify a height */
