--- a/templates/settings.html
+++ b/templates/settings.html
@@ -76,6 +76,12 @@
                 <h3>System Settings</h3>
                 <label for="bot_temperature">Bot Temperature:</label>
                 <input type="number" id="bot_temperature" name="bot_temperature" min="0" max="1" step="0.01" value="{{ settings['bot_temperature'] }}"><br><br>
+
+                <label for="greeting_message">Greeting Message:</label>
+                <textarea id="greeting_message" name="greeting_message" rows="4" cols="50" maxlength="500">{{ settings['greeting_message'] }}</textarea><br><br>
+
+                <label for="custom_prompt">Custom Prompt:</label>
+                <textarea id="custom_prompt" name="custom_prompt" rows="4" cols="50" maxlength="1000">{{ settings['custom_prompt'] }}</textarea><br><br>
             </div>
 
             <input type="submit" value="Save Settings">
