--- a/templates/admin.html
+++ b/templates/admin.html
@@ -95,17 +95,28 @@
                         </thead>
                         <tbody>
                             {% for document in documents %}
+                                {% set file_extension = document.name.split('.').pop().lower() %}
+                                {% if file_extension in ['pdf', 'xls', 'docx', 'xlsx'] %}
+                                    {% set file_icon = file_extension %}
+                                {% elif 'xls' in file_extension %}
+                                    {% set file_icon = 'xls' %}
+                                {% elif 'doc' in file_extension %}
+                                    {% set file_icon = 'docx' %}
+                                {% else %}
+                                    {% set file_icon = 'default' %}
+                                {% endif %}
+
                                 <tr>
-                                    <td><img src="{{ url_for('static', filename='images/PDF icon.png') }}" height="30" width="30" alt="PDF-icon"></td>
+                                    <td><img src="{{ url_for('static', filename='images/' + file_icon + '.png') }}" height="30" width="30" alt="{{ file_icon }}-icon"></td>
                                     <td>{{ document.name }}</td>
                                     <td class="sub-column">{{ document.size }} Mb</td>
                                     <td class="sub-column">{{ document.date_added }}</td>
                                     <td>
                                         <div class="bin-container">
-                                        <form action="/delete/{{ document.id }}" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
-                                            <input class ="bin" type="image" src="{{ url_for('static', filename='images/bin.png') }}" alt="Submit">
-                                        </form>
-                                    </div>
+                                            <form action="/delete/{{ document.id }}" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
+                                                <input class ="bin" type="image" src="{{ url_for('static', filename='images/bin.png') }}" alt="Submit">
+                                            </form>
+                                        </div>
                                     </td>
                                 </tr>
                             {% endfor %}
