Fix chatbot display issue

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -128,7 +128,7 @@
                 </section>
             </section>
         </div>
-        <div class="right-container">
+        <!-- <div class="right-container">
             <img id="chatbot-button" src="{{ url_for('static', filename='images/chatboticon.png') }}" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;">
 
             <iframe src="https://hr-bot-beast-aa887886e420.herokuapp.com/" id="chatbot-iframe" frameborder="0" scrolling="no" width="400" height="700" style="display: none; position:fixed; bottom:80px; right:0; z-index:9999;"></iframe>
@@ -168,7 +168,7 @@
                     document.removeEventListener('click', closeChatbotOnClickOutside);
                 }
             </script>
-        </div>
+        </div> -->
     </div>
     
     
